fixup! hubfactory renamed method, final taskomatic api field